--- a/src/main/resources/templates/fragments/assets.html
+++ b/src/main/resources/templates/fragments/assets.html
@@ -13,7 +13,7 @@
 
     <style>
         body {
-            background: url("/static/img/isometropolis.jpg");
+            background: url("/static/img/shattered.png");
         }
     </style>
 
