--- a/src/main/resources/templates/fragments/navs.html
+++ b/src/main/resources/templates/fragments/navs.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <a class="navbar-brand" th:href="@{/}">Bank-manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Admin
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" th:href="@{/user/all}">Users</a>
                     <a class="dropdown-item" th:href="@{/invoice/all}">Invoice</a>
                     <div class="dropdown-divider"></div>
