--- a/src/main/resources/templates/fragments/navs.html
+++ b/src/main/resources/templates/fragments/navs.html
@@ -11,14 +11,26 @@
 
     <div sec:authorize="isAuthenticated()" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link"
+                   th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}"
+                   th:href="@{/}">
+                    Home <span class="sr-only">(current)</span>
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/invoice}">Invoice</a>
+                <a class="nav-link"
+                   th:classappend="${#httpServletRequest.getRequestURI() == '/invoice' ? 'active':''}"
+                   th:href="@{/invoice}">
+                    Invoice
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/transaction}">Transaction</a>
+                <a class="nav-link"
+                   th:classappend="${#httpServletRequest.getRequestURI() == '/transaction' ? 'active':''}"
+                   th:href="@{/transaction}">
+                    Transaction
+                </a>
             </li>
             <li sec:authorize="hasAuthority('ADMIN')" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
