--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -120,8 +120,8 @@
     <h3>Transaction</h3>
 
     <div class="alert alert-danger" role="alert"
-         th:if="${errorCash}">
-        Do have money?
+         th:if="${param.errorCash}">
+        Do have a money?
     </div>
 
 
